very small optimizations

--- a/website/src/components/chartcard/chartcard.sass
+++ b/website/src/components/chartcard/chartcard.sass
@@ -14,6 +14,7 @@
                     display: block
                     min-width: 120px
                 .select-location
+                    margin: 2px
                     width: 240px
                 .chartoption
                     margin: 2px
