--- a/website/src/components/status/status.sass
+++ b/website/src/components/status/status.sass
@@ -1,8 +1,8 @@
 #status
-    padding: 10px    
+    padding: 10px 10px 0px 10px    
     .cardinfo
         padding-bottom: 10px
-        width: 780px
+        width: 788px
         margin-bottom: 10px
         margin-left: auto
         margin-right: auto
