remove bug showing splashmessage when clicking in data for a short time

--- a/website/src/components/misc/spinner.sass
+++ b/website/src/components/misc/spinner.sass
@@ -7,7 +7,7 @@
     height: 40px
     // margin: 100px auto
     background-color: #086bc2
-    display: none
+    display: block
 
     border-radius: 100%;  
     -webkit-animation: sk-scaleout 1.0s infinite ease-in-out
@@ -41,6 +41,6 @@
     color: white
     font-size: 20px
     border-radius: 5px
-    display: flex
+    display: none
     justify-content: center
     align-items: center
