--- a/website/src/components/misc/daterangepicker.sass
+++ b/website/src/components/misc/daterangepicker.sass
@@ -160,7 +160,7 @@
 		border-color: rgba(8, 107, 194, 1)
 		border-width: 1px
 		border-radius: 2px
-		text-align: center
+		// text-align: center
 		outline: none
 		padding-left: 5px
 		box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.1), 
