--- a/website/src/index.sass
+++ b/website/src/index.sass
@@ -122,7 +122,7 @@ body
     border-color: rgba(8, 107, 194, 1)
     border-width: 1px
     border-radius: 2px
-    text-align: center
+    // text-align: center
     outline: none
     padding-left: 5px
     box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.1), 
