--- a/website/src/components/status/status.sass
+++ b/website/src/components/status/status.sass
@@ -20,12 +20,12 @@
                 color: rgba(8, 107, 194, 1)
                 font-size: 20
                 font-weight: bold
-                &:hover
-                    cursor: pointer
-                    background-color: rgba(8, 107, 194, .05)
-                    border-radius: 2px
-                &:active
-                    background-color: rgba(8, 107, 194, .1)
+                // &:hover
+                //     cursor: pointer
+                //     background-color: rgba(8, 107, 194, .05)
+                //     border-radius: 2px
+                // &:active
+                //     background-color: rgba(8, 107, 194, .1)
             .cordsinfosetting
                 display: flex
                 flex-direction: row
