--- a/website/src/index.sass
+++ b/website/src/index.sass
@@ -68,22 +68,30 @@ body
 .input
     height: 36px
     border: solid
-    border-color: rgba(8, 107, 194, 1)
     border-width: 1px
     border-radius: 2px
     outline: none
-    box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.1), 
+    box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, .1), 
     0px 2px 2px 0px rgba(0, 0, 0, 0.07), 
     0px 1px 5px 0px rgba(0, 0, 0,0.06)
-    &:hover
-        background: rgba(8, 107, 194, 0.1)
-        box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 
-        0px 2px 2px 0px rgba(0, 0, 0, 0.14), 
-        0px 1px 5px 0px rgba(0, 0, 0,0.12)
-    &:active
-        background: rgba(8, 107, 194, 0.2)
     &:focus
         background: white
+    &:invalid
+        border-color: rgba(255, 0, 0, 1)
+        color: rgba(255, 0, 0, 1)
+        &:hover
+            background-color: rgba(255, 0, 0, .1)
+        &:active
+            background: rgba(255, 0, 0, .2)
+    &:valid
+        border-color: rgba(8, 107, 194, 1)
+        &:hover
+            background: rgba(8, 107, 194, .1)
+            box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, .2), 
+            0px 2px 2px 0px rgba(0, 0, 0, 0.14), 
+            0px 1px 5px 0px rgba(0, 0, 0,0.12)
+        &:active
+            background: rgba(8, 107, 194, .2)
 
 .button
     border: solid
