--- a/website/src/index.sass
+++ b/website/src/index.sass
@@ -71,9 +71,9 @@ body
     border-width: 1px
     border-radius: 2px
     outline: none
-    box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, .1), 
-    0px 2px 2px 0px rgba(0, 0, 0, 0.07), 
-    0px 1px 5px 0px rgba(0, 0, 0,0.06)
+    box-shadow: inset 0px 3px 1px -2px rgba(0, 0, 0, .1), 
+    inset 0px 2px 2px 0px rgba(0, 0, 0, 0.07), 
+    inset 0px 1px 5px 0px rgba(0, 0, 0,0.06)
     &:focus
         background: white
     &:invalid
@@ -87,9 +87,9 @@ body
         border-color: rgba(8, 107, 194, 1)
         &:hover
             background: rgba(8, 107, 194, .1)
-            box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, .2), 
-            0px 2px 2px 0px rgba(0, 0, 0, 0.14), 
-            0px 1px 5px 0px rgba(0, 0, 0,0.12)
+            box-shadow: inset 0px 3px 1px -2px rgba(0, 0, 0, .2), 
+            inset 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 
+            inset 0px 1px 5px 0px rgba(0, 0, 0,0.12)
         &:active
             background: rgba(8, 107, 194, .2)
 
@@ -133,14 +133,14 @@ body
     // text-align: center
     outline: none
     padding-left: 5px
-    box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.1), 
-    0px 2px 2px 0px rgba(0, 0, 0, 0.07), 
-    0px 1px 5px 0px rgba(0, 0, 0,0.06)
+    box-shadow: inset 0px 3px 1px -2px rgba(0, 0, 0, 0.1), 
+    inset 0px 2px 2px 0px rgba(0, 0, 0, 0.07), 
+    inset 0px 1px 5px 0px rgba(0, 0, 0,0.06)
     &:hover
         background: rgba(8, 107, 194, 0.1)
-        box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 
-        0px 2px 2px 0px rgba(0, 0, 0, 0.14), 
-        0px 1px 5px 0px rgba(0, 0, 0,0.12)
+        box-shadow: inset 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 
+        inset 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 
+        inset 0px 1px 5px 0px rgba(0, 0, 0,0.12)
     &:active
         background: rgba(8, 107, 194, 0.2)
     &:focus
