--- a/website/src/components/misc/daterangepicker.sass
+++ b/website/src/components/misc/daterangepicker.sass
@@ -163,14 +163,14 @@
 		// text-align: center
 		outline: none
 		padding-left: 5px
-		box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.1), 
-		0px 2px 2px 0px rgba(0, 0, 0, 0.07), 
-		0px 1px 5px 0px rgba(0, 0, 0,0.06)
+		box-shadow: inset 0px 3px 1px -2px rgba(0, 0, 0, 0.1), 
+		inset 0px 2px 2px 0px rgba(0, 0, 0, 0.07), 
+		inset 0px 1px 5px 0px rgba(0, 0, 0,0.06)
 		&:hover
 			background: rgba(8, 107, 194, 0.1)
-			box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 
-			0px 2px 2px 0px rgba(0, 0, 0, 0.14), 
-			0px 1px 5px 0px rgba(0, 0, 0,0.12)
+			box-shadow: inset 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 
+			inset 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 
+			inset 0px 1px 5px 0px rgba(0, 0, 0,0.12)
 		&:active
 			background: rgba(8, 107, 194, 0.2)
 		&:focus
