add download button

--- a/website/src/components/chartcard/chartcard.pug
+++ b/website/src/components/chartcard/chartcard.pug
@@ -29,8 +29,11 @@ div.chartgraph
                     option(value='w') Weeks
 
     .card
-        #chartlegend.chartlegenddiv
         .containerforspinner
+            .chartlegenddiv
+                button.button#downloadButton(disabled) Download as JSON
+                .spacer
+                #chartlegend
             #basicchart.chartdiv
             .spinner
             .splashmessage
