--- a/website/src/components/status/status.pug
+++ b/website/src/components/status/status.pug
@@ -26,10 +26,10 @@ div#status
                 each location, location_id in desc.measurements
                     .gridrow(id=location_id.replace(/\s/g, '')+'-'+ gridname.replace(/\s/g, ''))
                         .firstct.location_id #{location_id}
-                        .allothers.U1 #{location.U1} V
-                        .allothers.U2 #{location.U2} V
-                        .allothers.U3 #{location.U3} V
-                        .allothers.I1 #{location.I1} A
-                        .allothers.I2 #{location.I2} A
-                        .allothers.I3 #{location.I3} A
+                        .allothers.U1 #{location.U1}
+                        .allothers.U2 #{location.U2}
+                        .allothers.U3 #{location.U3}
+                        .allothers.I1 #{location.I1}
+                        .allothers.I2 #{location.I2}
+                        .allothers.I3 #{location.I3}
                         .allothers.timeSinceLastStatus #{location.timeSinceLastStatusText} ago
