--- a/website/src/index.pug
+++ b/website/src/index.pug
@@ -1,6 +1,7 @@
 doctype html5
 html
     head
+        link(rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png")
         title BSS Netzmonitor
         meta(charset="UTF-8")
         link(href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet")
