small fix in div height

--- a/website/src/components/chartcard/chartcard.sass
+++ b/website/src/components/chartcard/chartcard.sass
@@ -60,7 +60,7 @@
         .chartdiv
             width: 100%
             min-width: 378px
-            height: calc(100% - 289px)
+            height: calc(100% -0px)
             min-height: 676px
             position: relative
             margin-top: 10px
