--- a/website/src/components/chartcard/chartcard.sass
+++ b/website/src/components/chartcard/chartcard.sass
@@ -36,13 +36,14 @@
         display: flex
         flex-direction: column
         position: relative
-        flex: 0 1 auto
+        flex: 1 1 auto
+        width: 100%
         .chartlegenddiv
             margin-bottom: 4px
             margin-top: 4px
             display: flex
             flex-direction: row
-            .sapcer
+            .spacer
                 flex-grow: 1    
             #chartlegend
                 text-align: right
@@ -58,11 +59,9 @@
                     margin-left: 5px
                     text-align: left
         .chartdiv
+            display: block
             width: 100%
-            min-width: 378px
-            height: calc(100% - 320px)
-            @supports (-moz-appearance:none)
-                min-height: 600px
+            height: calc(100vh - 320px)
             position: relative
             margin-top: 10px
 
