--- a/website/src/components/status/status.sass
+++ b/website/src/components/status/status.sass
@@ -2,7 +2,7 @@
     padding: 10px 10px 0px 10px    
     .cardinfo
         padding-bottom: 10px
-        width: 788px
+        width: 1100px
         margin-bottom: 10px
         margin-left: auto
         margin-right: auto
@@ -40,7 +40,7 @@
                 .spacer
                     flex-grow: 1
                 .cordsinput
-                    max-width: 150px
+                    max-width: 105px
                     padding-left: 4px
                     padding-right: 4px
                     margin-left: 4px
@@ -60,11 +60,15 @@
                 font-size: 12
                 color: darkgray
                 .firstct
-                    width: 105px
+                    width: 120px
                     text-align: left
                 .allothers
                     margin-left: auto
-                    width: 90px
+                    width: 100px
+                    text-align: right
+                .statustimes
+                    margin-left: auto
+                    width: 110px
                     text-align: right
             
             .gridrow
@@ -76,14 +80,18 @@
                 height: 32px
                 .firstct
                     font-weight: bold
-                    width: 105px
+                    width: 120px
                     overflow: hidden 
                     white-space: nowrap
                     text-overflow: ellipsis
                     text-align: left
                 .allothers
                     margin-left: auto
-                    width: 90px
+                    width: 100px
+                    text-align: right
+                .statustimes
+                    margin-left: auto
+                    width: 110px
                     text-align: right
                 &:hover
                     cursor: pointer
